--- a/FinalProject/app/src/main/res/layout/manage_transaction_page.xml
+++ b/FinalProject/app/src/main/res/layout/manage_transaction_page.xml
@@ -19,7 +19,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
